--- a/static/sass/_mixins.sass
+++ b/static/sass/_mixins.sass
@@ -1,3 +1,7 @@
+@mixin abs_vert_center
+    left: 50%
+    transform: translateX(-50%)
+
 @mixin transition-ease
   transition: all 0.3s ease-in-out
 
