--- a/timeline/static/timeline/css/timeline.css
+++ b/timeline/static/timeline/css/timeline.css
@@ -1,77 +1,49 @@
+@import url("https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Source+Serif+Pro:wght@600&display=swap");
 body {
-  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/static/timeline/images/time_background.jpg");
-  background-repeat: no-repeat;
-  background-size: auto;
-  background-attachment: fixed;
+  background: linear-gradient(45deg, #8BB4C4, white);
+  height: 100vh;
 }
 
-.moment {
-  width: 60%;
-  margin: 1rem auto;
-  margin-bottom: 1.5rem;
-  border-radius: 10px;
-  background: white;
-  box-shadow: 0 0 20px 0 black;
+.heading {
+  width: 70%;
+  margin: 0 auto;
+  font-family: "Berkshire Swash", cursive;
+  font-size: 3rem;
+  text-align: right;
+  padding-top: 2rem;
 }
-.moment__head {
-  display: flex;
-  justify-content: space-between;
-  color: white;
-  background: #1f1f1f;
-  padding: 1rem;
-  border: 1px black solid;
-  border-top-left-radius: inherit;
-  border-top-right-radius: inherit;
-  font-size: 1rem;
-}
-.moment__head__title {
-  font-weight: bold;
-}
-.moment__head__time {
-  font-style: italic;
-}
-.moment__body {
-  display: flex;
-  border-radius: inherit;
-}
-.moment__body p {
-  width: 40%;
-  padding: 1rem 2rem;
-}
-.moment__body__gallery {
-  width: 60%;
-  background: #2d93ad;
+
+.blog_grid {
   display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 25rem));
+  grid-auto-rows: 20rem;
+  grid-gap: 4rem;
+  margin: 0 auto;
+  width: 70%;
+  padding: 1.5rem 0;
+}
+.blog_grid .blog {
+  background: radial-gradient(at top left, white, #e0e0e0 100%);
+  box-shadow: 1px 2px 3px #666;
+  border: 1px solid #707070;
+  border-radius: 4px;
   padding: 1rem;
-  height: inherit;
-  border-bottom-right-radius: inherit;
-  position: relative;
 }
-.moment__body__gallery .slide img {
-  box-shadow: 2px 2px 15px black;
-  max-width: 100%;
-  max-height: 100%;
+.blog_grid .blog .timestamp {
+  font-family: Roboto, sans-serif;
+  text-align: right;
+  color: gray;
 }
-.moment__body__gallery .prev, .moment__body__gallery .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
+.blog_grid .blog .title {
   padding: 1rem;
-  transform: translateY(-50%);
-  color: white;
-  font-weight: bold;
-  font-size: 1rem;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
+  font-family: "Merriweather", serif;
+  font-size: 2.2rem;
 }
-.moment__body__gallery .prev:hover, .moment__body__gallery .next:hover {
-  background: rgba(0, 0, 0, 0.5);
-}
-.moment__body__gallery .next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
+.blog_grid .blog .subtext {
+  padding: 1rem;
+  font-family: "Source Serif Pro", serif;
+  color: #696969;
 }
 
 @media screen and (max-width: 1300px) {
