--- a/timeline/static/timeline/sass/timeline.sass
+++ b/timeline/static/timeline/sass/timeline.sass
@@ -1,81 +1,49 @@
+@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Source+Serif+Pro:wght@600&display=swap')
 @import 'variables'
 @import 'mixins'
 
 body
-  background: linear-gradient(rgba(#000, 0.3), rgba(#000, 0.3)), url("/static/timeline/images/time_background.jpg")
-  background-repeat: no-repeat
-  background-size: auto
-  background-attachment: fixed
+  background: linear-gradient(45deg, #8BB4C4, white)
+  height: 100vh
 
-.moment
-  width: 60%
-  margin: 1rem auto
-  margin-bottom: 1.5rem
-  border-radius: 10px
-  background: white
-  box-shadow: 0 0 20px 0 black
+.heading
+  width: 70%
+  margin: 0 auto
+  font-family: "Berkshire Swash", cursive
+  font-size: 3rem
+  text-align: right
+  padding-top: 2rem
 
-  &__head
-    display: flex
-    justify-content: space-between
-    color: white
-    background: $other-color
+.blog_grid
+  display: grid
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 25rem))
+  grid-auto-rows: 20rem
+  grid-gap: 4rem
+  margin: 0 auto
+  width: 70%
+  padding: 1.5rem 0
+
+  .blog
+    background: radial-gradient(at top left, white, #e0e0e0 100%)
+    box-shadow: 1px 2px 3px #666
+    border: 1px solid #707070
+    border-radius: 4px
     padding: 1rem
-    border: 1px black solid
-    border-top-left-radius: inherit
-    border-top-right-radius: inherit
-    font-size: 1rem
 
-    &__title
-      font-weight: bold
+    .timestamp
+      font-family: Roboto, sans-serif
+      text-align: right
+      color: gray
 
-    &__time
-      font-style: italic
-
-  &__body
-    display: flex
-    border-radius: inherit
-
-    p
-      width: 40%
-      padding: 1rem 2rem
-
-    &__gallery
-      width: 60%
-      background: $secondary-background
-      display: grid
+    .title
       padding: 1rem
-      height: inherit
-      border-bottom-right-radius: inherit
-      position: relative
+      font-family: "Merriweather", serif
+      font-size: 2.2rem
 
-
-      .slide
-        img
-          box-shadow: 2px 2px 15px black
-          max-width: 100%
-          max-height: 100%
-
-      .prev, .next
-        cursor: pointer
-        position: absolute
-        top: 50%
-        width: auto
-        padding: 1rem
-        transform: translateY(-50%)
-        color: white
-        font-weight: bold
-        font-size: 1rem
-        transition: 0.6s ease
-        border-radius: 0 3px 3px 0
-        user-select: none
-
-        &:hover
-          background: rgba(#000, 0.5)
-
-      .next
-        right: 0
-        border-radius: 3px 0 0 3px
-
+    .subtext
+      padding: 1rem
+      font-family: "Source Serif Pro", serif
+      color: #696969
 
 @import 'responsive'
