Fix spacing and sizing of grid

--- a/timeline/templates/timeline/timeline.html
+++ b/timeline/templates/timeline/timeline.html
@@ -17,7 +17,26 @@
             <p class="timestamp">a month ago</p>
             <p class="title">This is how I wrote my first blog.</p>
             <p class="subtext">This is just a sub text. This is just a sub text. This is just a sub text. This is just a sub text.</p>
-
+        </div>
+        <div class="blog">
+            <p class="timestamp">a month ago</p>
+            <p class="title">This is how I wrote my first blog.</p>
+            <p class="subtext">This is just a sub text. This is just a sub text. This is just a sub text. This is just a sub text.</p>
+        </div>
+        <div class="blog">
+            <p class="timestamp">a month ago</p>
+            <p class="title">This is how I wrote my first blog.</p>
+            <p class="subtext">This is just a sub text. This is just a sub text. This is just a sub text. This is just a sub text.</p>
+        </div>
+        <div class="blog">
+            <p class="timestamp">a month ago</p>
+            <p class="title">This is how I wrote my first blog.</p>
+            <p class="subtext">This is just a sub text. This is just a sub text. This is just a sub text. This is just a sub text.</p>
+        </div>
+        <div class="blog">
+            <p class="timestamp">a month ago</p>
+            <p class="title">This is how I wrote my first blog.</p>
+            <p class="subtext">This is just a sub text. This is just a sub text. This is just a sub text. This is just a sub text.</p>
         </div>
     </div>
 {% endblock %}
