--- a/timeline/static/timeline/css/timeline.css
+++ b/timeline/static/timeline/css/timeline.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Source+Serif+Pro:wght@600&display=swap");
 body {
-  background: linear-gradient(45deg, #8BB4C4, white);
+  background: linear-gradient(45deg, #8BB4C4, white) fixed;
   height: 100vh;
 }
 
@@ -16,32 +16,36 @@ body {
 
 .blog_grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(15rem, 25rem));
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
   grid-auto-rows: 20rem;
-  grid-gap: 4rem;
+  grid-gap: 1rem;
   margin: 0 auto;
   width: 70%;
   padding: 1.5rem 0;
 }
 .blog_grid .blog {
   background: radial-gradient(at top left, white, #e0e0e0 100%);
-  box-shadow: 1px 2px 3px #666;
   border: 1px solid #707070;
   border-radius: 4px;
-  padding: 1rem;
+  padding: 1.5rem;
+}
+.blog_grid .blog:hover {
+  box-shadow: 0 2px 3px #666;
+  transition: all 0.1s ease-in-out;
 }
 .blog_grid .blog .timestamp {
   font-family: Roboto, sans-serif;
   text-align: right;
   color: gray;
+  font-size: 0.8rem;
 }
 .blog_grid .blog .title {
-  padding: 1rem;
+  padding: 1rem 0;
   font-family: "Merriweather", serif;
-  font-size: 2.2rem;
+  font-size: 1.5rem;
 }
 .blog_grid .blog .subtext {
-  padding: 1rem;
+  padding: 1rem 0;
   font-family: "Source Serif Pro", serif;
   color: #696969;
 }
