--- a/timeline/templates/timeline/index_page.html
+++ b/timeline/templates/timeline/index_page.html
@@ -19,7 +19,7 @@
     <div class="index_descrip">{{ page.description | richtext }}</div>
     <div class="blog_grid">
     {% for post in page.get_children %}
-        <a class="blog" href="{{ post.url }}">
+        <a class="blog" href="{% pageurl post %}">
             <p class="timestamp">{{ post.timestamp }}</p>
             <p class="title">{{ post.title }}</p>
             <p class="subtext">{{ post.intro }}</p>
