--- a/timeline/static/timeline/sass/index_page.sass
+++ b/timeline/static/timeline/sass/index_page.sass
@@ -3,12 +3,6 @@
 @import 'variables'
 @import 'mixins'
 
-
-@mixin centerit
-  margin: 0 auto
-  width: 70%
-
-
 body
   background: linear-gradient(45deg, #8BB4C4, white) fixed
   height: 100vh
@@ -44,7 +38,7 @@ body
       box-shadow: 0 2px 3px #666
       transition: all 0.1s ease-in-out
 
-    .timestamp
+    .date
       font-family: Roboto, sans-serif
       text-align: right
       color: gray
