--- a/timeline/templates/timeline/index_page.html
+++ b/timeline/templates/timeline/index_page.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block extracss %}
-    <link rel="stylesheet" href="{% static 'timeline/css/timeline.css' %}">
+    <link rel="stylesheet" href="{% static 'timeline/css/index_page.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -20,7 +20,7 @@
     <div class="blog_grid">
     {% for post in page.get_children %}
         <a class="blog" href="{% pageurl post %}">
-            <p class="timestamp">{{ post.timestamp }}</p>
+            <p class="date">{{ post.date }}</p>
             <p class="title">{{ post.title }}</p>
             <p class="subtext">{{ post.intro }}</p>
         </a>
