--- a/timeline/templates/timeline/post.html
+++ b/timeline/templates/timeline/post.html
@@ -41,4 +41,24 @@
             </g>
         </svg>
     </a>
+    <a href="{{ page.get_prev_sibling.url }}">
+        <svg class="nav_post prev" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62 70">
+            <g id="prev" transform="translate(0 70) rotate(-90)">
+                <path d="M 65.71787261962891 59.5 L 4.282129764556885 59.5 L 35 5.085487365722656 L 65.71787261962891 59.5 Z"
+                      stroke="none"/>
+                <path class="border" d="M 35 10.17098617553711 L 8.564266204833984 57 L 61.43573379516602 57 L 35 10.17098617553711 M 35 0 L 70 62 L 0 62 L 35 0 Z"
+                      stroke="none" fill="#707070"/>
+            </g>
+        </svg>
+    </a>
+    <a href="{{ page.get_next_sibling.url }}">
+        <svg class="nav_post next" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62 70">
+            <g id="prev" transform="translate(0 70) rotate(-90)">
+                <path d="M 65.71787261962891 59.5 L 4.282129764556885 59.5 L 35 5.085487365722656 L 65.71787261962891 59.5 Z"
+                      stroke="none"/>
+                <path class="border" d="M 35 10.17098617553711 L 8.564266204833984 57 L 61.43573379516602 57 L 35 10.17098617553711 M 35 0 L 70 62 L 0 62 L 35 0 Z"
+                      stroke="none"/>
+            </g>
+        </svg>
+    </a>
 {% endblock %}
