--- a/timeline/templates/timeline/post.html
+++ b/timeline/templates/timeline/post.html
@@ -31,7 +31,7 @@
 
         <p class="intro">{{ page.intro }}</p>
 
-        <div>{{ page.body|richtext }}</div>
+        <div class="post_body">{{ page.body|richtext }}</div>
     </div>
     <a href="{{ page.get_parent.url }}">
         <svg class="back" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 87.76 87.76">
