--- a/timeline/static/timeline/css/index_page.css
+++ b/timeline/static/timeline/css/index_page.css
@@ -5,54 +5,54 @@ body {
   height: 100vh;
 }
 
-.heading {
+.container {
   margin: 0 auto;
-  width: 60%;
+  width: 80%;
+  padding: 5rem 0;
+}
+
+.heading {
   font-family: "Berkshire Swash", cursive;
   font-size: 3rem;
   text-align: right;
-  padding-top: 2rem;
 }
 
 .index_descrip > * {
-  margin: 0 auto;
-  width: 60%;
   padding: 1.5rem 0;
   text-align: right;
   font-style: italic;
 }
 
 .blog_grid {
-  margin: 0 auto;
-  width: 60%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
-  grid-auto-rows: 20rem;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  grid-auto-rows: 5rem;
   grid-gap: 1rem;
-  padding: 1.5rem 0;
 }
 .blog_grid .blog {
   background: radial-gradient(at top left, white, #e0e0e0 100%);
   border: 1px solid #707070;
   border-radius: 4px;
-  padding: 1.5rem;
 }
 .blog_grid .blog:hover {
   box-shadow: 0 2px 3px #666;
   transition: all 0.1s ease-in-out;
 }
-.blog_grid .blog .date {
+.blog_grid .blog .content {
+  padding: 1.5rem;
+}
+.blog_grid .blog .content .date {
   font-family: Roboto, sans-serif;
   text-align: right;
   color: gray;
   font-size: 0.8rem;
 }
-.blog_grid .blog .title {
+.blog_grid .blog .content .title {
   padding: 1rem 0;
   font-family: "Merriweather", serif;
   font-size: 1.5rem;
 }
-.blog_grid .blog .subtext {
+.blog_grid .blog .content .subtext {
   padding: 1rem 0;
   font-family: "Source Serif Pro", serif;
   color: #696969;
