--- a/timeline/static/timeline/sass/index_page.sass
+++ b/timeline/static/timeline/sass/index_page.sass
@@ -7,51 +7,53 @@ body
   background: linear-gradient(45deg, #8BB4C4, white) fixed
   height: 100vh
 
+.container
+  margin: 0 auto
+  width: 80%
+  padding: 5rem 0
+
 .heading
-  @include centerit
   font-family: "Berkshire Swash", cursive
   font-size: 3rem
   text-align: right
-  padding-top: 2rem
 
 .index_descrip > *
-  @include centerit
   padding: 1.5rem 0
   text-align: right
   font-style: italic
 
 .blog_grid
-  @include centerit
   display: grid
-  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr))
-  grid-auto-rows: 20rem
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr))
+  grid-auto-rows: 5rem
   grid-gap: 1rem
-  padding: 1.5rem 0
 
   .blog
     background: radial-gradient(at top left, white, #e0e0e0 100%)
     border: 1px solid #707070
     border-radius: 4px
-    padding: 1.5rem
 
     &:hover
       box-shadow: 0 2px 3px #666
       transition: all 0.1s ease-in-out
 
-    .date
-      font-family: Roboto, sans-serif
-      text-align: right
-      color: gray
-      font-size: 0.8rem
+    .content
+      padding: 1.5rem
 
-    .title
-      padding: 1rem 0
-      font-family: "Merriweather", serif
-      font-size: 1.5rem
+      .date
+        font-family: Roboto, sans-serif
+        text-align: right
+        color: gray
+        font-size: 0.8rem
 
-    .subtext
-      padding: 1rem 0
-      font-family: "Source Serif Pro", serif
-      color: #696969
+      .title
+        padding: 1rem 0
+        font-family: "Merriweather", serif
+        font-size: 1.5rem
+
+      .subtext
+        padding: 1rem 0
+        font-family: "Source Serif Pro", serif
+        color: #696969
 
 @import 'responsive'
