--- a/timeline/static/timeline/css/index_page.css
+++ b/timeline/static/timeline/css/index_page.css
@@ -26,8 +26,8 @@ body {
 .blog_grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-  grid-auto-rows: 5rem;
-  grid-gap: 1rem;
+  grid-auto-rows: 10px;
+  grid-gap: 0.5rem;
 }
 .blog_grid .blog {
   background: radial-gradient(at top left, white, #e0e0e0 100%);
