--- a/timeline/static/timeline/sass/index_page.sass
+++ b/timeline/static/timeline/sass/index_page.sass
@@ -25,8 +25,8 @@ body
 .blog_grid
   display: grid
   grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr))
-  grid-auto-rows: 5rem
-  grid-gap: 1rem
+  grid-auto-rows: 10px
+  grid-gap: 0.5rem
 
   .blog
     background: radial-gradient(at top left, white, #e0e0e0 100%)
