--- a/timeline/templates/timeline/index_page.html
+++ b/timeline/templates/timeline/index_page.html
@@ -19,7 +19,7 @@
         <p class="heading">{{ page.title }}</p>
         <div class="index_descrip">{{ page.description | richtext }}</div>
         <div class="blog_grid">
-            {% for post in page.get_children %}
+            {% for post in blog_posts %}
                 <a class="blog" href="{% pageurl post %}">
                     <div class="content">
                         <p class="date">{{ post.specific.date }}</p>
