--- a/timeline/static/timeline/css/post.css
+++ b/timeline/static/timeline/css/post.css
@@ -22,27 +22,54 @@ body {
 }
 
 .nav_post {
-  height: 3rem;
   position: fixed;
   top: 50%;
   transform: translate(-50%, -50%);
+}
+.nav_post svg {
+  height: 3rem;
   fill: white;
 }
-.nav_post .border {
+.nav_post svg .border {
   fill: #707070;
   transition: all 0.3s ease-in-out;
 }
-.nav_post:hover .border {
+.nav_post svg:hover .border {
   fill: #2C80EB;
+}
+.nav_post .tooltip_text {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  padding: 10px;
+  min-width: 150px;
+  max-width: 200px;
+  background: black;
+  color: white;
+  text-align: center;
+  border-radius: 5px;
+  transition: opacity 1s;
+}
+.nav_post:hover .tooltip_text {
+  visibility: visible;
+  opacity: 80%;
 }
 
 .prev {
   left: 5%;
 }
+.prev .tooltip_text {
+  left: 50px;
+}
 
 .next {
-  transform: rotate(180deg);
   left: 95%;
+}
+.next svg {
+  transform: rotate(180deg);
+}
+.next .tooltip_text {
+  right: 50px;
 }
 
 .scrolled {
