--- a/timeline/static/timeline/sass/post.sass
+++ b/timeline/static/timeline/sass/post.sass
@@ -23,26 +23,55 @@ body
     fill: #597569
 
 .nav_post
-  height: 3rem
   position: fixed
   top: 50%
   transform: translate(-50%, -50%)
-  fill: white
 
-  .border
-    fill: #707070
-    @include transition-ease
+  svg
+    height: 3rem
+    fill: white
+
+    .border
+      fill: #707070
+      @include transition-ease
+
+    &:hover
+      .border
+        fill: #2C80EB
+
+  .tooltip_text
+    visibility: hidden
+    opacity: 0
+    position: absolute
+    padding: 10px
+    min-width: 150px
+    max-width: 200px
+
+    background: black
+    color: white
+    text-align: center
+    border-radius: 5px
+    transition: opacity 1s
 
   &:hover
-    .border
-      fill: #2C80EB
+    .tooltip_text
+      visibility: visible
+      opacity: 80%
 
 .prev
   left: 5%
 
+  .tooltip_text
+    left: 50px
+
 .next
-  transform: rotate(180deg)
   left: 95%
+
+  svg
+    transform: rotate(180deg)
+
+  .tooltip_text
+    right: 50px
 
 .scrolled
   box-shadow: 0 1px 6px gray
