--- a/portfolio/static/portfolio/sass/portfolio.sass
+++ b/portfolio/static/portfolio/sass/portfolio.sass
@@ -8,6 +8,12 @@
 html
   scroll-behavior: smooth
 
+ul
+  margin-left: 1.5rem
+
+  ul
+    margin-left: 1.5rem
+
 .flex
   display: flex
   justify-content: space-between
