--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -15,7 +15,8 @@
         <div class="banner">My Motivation</div>
         <div class="container" id="motivation">
             <p>
-                It's just that I don't want to die regretting that I could've tried that and It could have been more fun living life.<br>
+                It's just that I don't want to die regretting that I could've tried that and It could have been more fun
+                living life.<br>
                 It's just that what incredible things I can do if I consider myself fearless.<br>
                 It's just that I want to jump on the opportunities I get. <br>
                 It's just that I truly want to know my real limits. <br>
@@ -42,19 +43,64 @@
         <div class="container" id="experience">
             <div class="container__item">
                 <div class="flex">
+                    <p class="title">Software Engineer - Core Platform</p>
+                    <p class="duration">September 2020 - Present</p>
+                </div>
+            </div>
+            <p class="container__item__subtitle">Soroco India Pvt. Ltd.</p>
+            <p class="container__item_description">
+
+            </p>
+            <div class="container__item">
+                <div class="flex">
                     <p class="title">Programmer Analyst - AI Department</p>
-                    <p class="duration">December 2020 - Present</p>
+                    <p class="duration">December 2019 - September 2020</p>
                 </div>
                 <p class="container__item__subtitle">Dosepack LLP, Meditab Softwares Inc., India</p>
-                <p class="container__item__description">Lorem ipsum
-                    Lorem ipsumLorem ipsumLorem ipsumLorem ipsum
-                    Lorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem
-                    ipsum
-                    Lorem ipsum
-                    Lorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsum
-                    Lorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsum
-                    Lorem ipsumLorem ipsum
-
+                <p class="container__item__description">
+                <ul>
+                    <li>Camera Module
+                        <ul>
+                            <li>For a machine vision camera, I implemented a stable Python API that uses SDK provided in
+                                C
+                                and solved the challenge of converting the memory block of raw image to the NumPy matrix
+                                without image distortion.
+                            </li>
+                            <li>
+                                Solved the challenge of parallelization and synchronization (0.1s of difference between
+                                any
+                                two frames’ time stamps) of capturing frames when multiprocessing more than one module.
+                            </li>
+                        </ul>
+                    </li>
+                    <li>Face Module
+                        <ul>
+                            <li>
+                                Developed a merging algorithm for tracks between two camera modules which uses the
+                                fundamental matrix between the same.
+                            </li>
+                            <li>
+                                Designed a solution for filtering unwanted tracks which are determined by the nature of
+                                values of the first and second-order derivatives of the series of heights of the
+                                subsequent face detections.
+                            </li>
+                            <li>
+                                Developed a merging algorithm for tracks between two camera modules which uses the
+                                fundamental matrix between the same.
+                            </li>
+                            <li>
+                                Restructured the codebase into a loose-coupled and high-cohesive one and achieved a more
+                                concise and highly pluggable code.
+                                Algorithmic optimizations in terms of time and memory and improvement in the real-time
+                                operation.
+                            </li>
+                            <li>
+                                Developed a sync mechanism between the Google Cloud Bucket and the local file system
+                                which is to be used in real-time.
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
                 </p>
             </div>
             <div class="container__item">
@@ -63,15 +109,11 @@
                     <p class="duration">May 2018 - July 2018</p>
                 </div>
                 <p class="container__item__subtitle">Limelight Innovations, Ahmedabad</p>
-                <p class="container__item__description">Lorem ipsum
-                    Lorem ipsumLorem ipsumLorem ipsumLorem ipsum
-                    Lorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem
-                    ipsum
-                    Lorem ipsum
-                    Lorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsum
-                    Lorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsum
-                    Lorem ipsumLorem ipsum
-
+                <p class="container__item__description">
+                <ul>
+                    <li>Improved the overall functioning and fixed bugs.</li>
+                    <li>Tech. Stack: Django, RethinkDB, PostgreSQL, MQTT, Docker.</li>
+                </ul>
                 </p>
             </div>
         </div>
