Change landing image

--- a/portfolio/templates/portfolio/about.html
+++ b/portfolio/templates/portfolio/about.html
@@ -10,7 +10,7 @@
 
 {% block content %}
     <div class="section landing">
-        <img class="back" src="{% static 'portfolio/images/landing.png' %}" alt="landing_image">
+        <img class="back" src="{% static 'portfolio/images/landing.jpg' %}" alt="landing_image">
     </div>
     <div class="section moreabout">
         <svg class="back" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" viewBox="0 0 1920 1000"><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path class="cls-2" d="M0,0C1920.5.5,1920,1000,1920,1000H0Z"/></g></g></svg>
